test/unittest/error/tst.DTRACEFLT_BADADDR.r
The arguments are 2 1 16 6 0
The value of arg4 = 1

-- @@stderr --
dtrace: error on enabled probe ID 2 (ID 1: dtrace:::BEGIN): invalid kernel access in action #1 at DIF offset 16
